--- a/style.css
+++ b/style.css
@@ -151,7 +151,7 @@ footer p {
 	border-radius: 20px;
 
 	padding: 10px;
-	background-color: #f4a261;
+	background-color: #a5f595;
 	color: white;
 	width: 100%;
 	margin: 5px 0;
